[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/sounds.gd" type="Script" id=1]

[node name="Sounds" type="Node"]
script = ExtResource( 1 )

[node name="Sfx" type="Node" parent="."]

[node name="Channel" type="AudioStreamPlayer" parent="Sfx"]
bus = "SFX"

[node name="Channel2" type="AudioStreamPlayer" parent="Sfx"]
bus = "SFX"

[node name="Channel3" type="AudioStreamPlayer" parent="Sfx"]
bus = "SFX"

[node name="Channel4" type="AudioStreamPlayer" parent="Sfx"]
bus = "SFX"

[node name="Channel5" type="AudioStreamPlayer" parent="Sfx"]
bus = "SFX"

[node name="Channel6" type="AudioStreamPlayer" parent="Sfx"]
bus = "SFX"

[node name="Music" type="Node" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Music"]
bus = "Music"

[node name="Tween" type="Tween" parent="."]

[node name="MusicTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MusicTimer" to="." method="_on_MusicTimer_timeout"]
